# laps-sem

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt  SEM.h  basisfunction.cpp  basisfunction.h  bratu.h  element.cpp  element.h  elementslist.cpp  elementslist.h  equation.h  gaussianintegration.cpp  gaussianintegration.h  ghostscommunication.h  gradshafranov.h  include.h  legendre.cpp  legendre.h  legmodalbasis.cpp  legmodalbasis.h  line.h  linearequation.h  lineargradshafranov.h  lineargradshafranovmod.h  lineslist.cpp  lineslist.h  main.cpp  mapping.h  mappingbase.h  mesh.cpp  mesh.h  meshgeometry.cpp  meshgeometry.h  meshparallel.cpp  meshparallel.h  meshsem.cpp  meshsem.h  modesmapping.h  node.cpp  node.h  nodeslist.cpp  (+7 more)
